cancel save btn edit page

--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -34,6 +34,7 @@
   --marine: #003D5B;
 
   --orange_hover: #e29d2e;
+  --rouge_hover: #b43d4d;
   --cyan_hover:#016474;
 
   --color-border: var(--vt-c-divider-light-2);
