--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -32,6 +32,7 @@
   --cyan: #00798C;
   --light-blue: #30638E;
   --marine: #003D5B;
+  --green: #6DD374;
 
   --orange_hover: #e29d2e;
   --rouge_hover: #b43d4d;
