--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -67,4 +67,5 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: scroll;
 }
